lib/puppeto_parser.go
// Code generated from /home/reiyo/Project/Go/MarionetteEnsemble/Puppeto/grammars/PuppetoParser.g4 by ANTLR 4.12.0. DO NOT EDIT.

package lib // PuppetoParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PuppetoParser struct {
	*antlr.BaseParser
}

var puppetoparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func puppetoparserParserInit() {
	staticData := &puppetoparserParserStaticData
	staticData.literalNames = []string{
		"", "'...'", "'return'", "'nan'", "'<'", "'>'", "'<?pup'", "'?>'", "'<?='",
		"'=?>'", "", "", "'=='", "'!='", "'<='", "'>='", "'for'", "'='", "'echo'",
		"'{'", "'}'", "','", "'['", "']'", "'fn'", "'('", "')'", "'&&'", "'||'",
		"':'", "'.'", "'+'", "'-'", "'**'", "'%'", "'&'", "'|'", "'^'", "'<<'",
		"'>>'", "'!'", "'if'", "'else'", "'switch'", "'case'", "'break'", "'try'",
		"'continue'", "'catch'", "'default'", "'let'", "'*'", "'/'", "", "",
		"'nil'",
	}
	staticData.symbolicNames = []string{
		"", "SPREAD", "RETURN", "NAN", "LT", "GT", "PUP_START_TAG", "PUP_END_TAG",
		"PUP_SHORT_START_TAG", "PUP_SHORT_END_TAG", "TWO_SIDES_OPERATOR", "ONE_SIDE_OPERATOR",
		"EQ", "NEQ", "LTOE", "GTOE", "FOR", "TO", "ECHO", "L_CURLY", "R_CURLY",
		"COMMA", "L_SQUARE", "R_SQUARE", "FN", "L_PARENTHES", "R_PARENTHES",
		"AND", "OR", "COLON", "DOT", "PLUS", "MINUS", "DOUBLE_STAR", "PERCENT",
		"BAND", "BOR", "BXOR", "BLS", "BRS", "NOT", "IF", "ELSE", "SWITCH",
		"CASE", "BREAK", "TRY", "CONTINUE", "CATCH", "DEFAULT", "LET", "STAR",
		"SLASH", "FLOAT", "INTEGER", "NIL", "BOOLEAN", "IDENTIFIER", "STRING",
		"WS", "SEMICOLON", "HTML",
	}
	staticData.ruleNames = []string{
		"literalValue", "object", "pair", "array", "functionDefinition", "argumentList",
		"argument", "none", "scopeBody", "value", "expression", "logicalExpression",
		"equalityExpression", "comparisonExpression", "additiveExpression",
		"multiplicativeExpression", "powerExpression", "bitwiseExpression",
		"shiftExpression", "unaryExpression", "getProperty", "setProperty",
		"callExpression", "chainExpression", "lhsVariableAssignation", "rhsVariableAssignation",
		"midVariableAssignation", "variableAssignation", "variableDefinition",
		"variableDefinitionBody", "ifStatement", "loopStatement", "switchStatement",
		"switchCase", "breakStatement", "continueStatement", "tryStatement",
		"returnStatement", "statementList", "statement", "scope", "scopeWithBreakContinue",
		"programBody", "programBodyList", "echoStatement", "programBodyWithBreakContinue",
		"pupShortCode", "pupCode", "htmlList", "html", "program",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PuppetoParserInit initializes any static state used to implement PuppetoParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPuppetoParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PuppetoParserInit() {
	staticData := &puppetoparserParserStaticData
	staticData.once.Do(puppetoparserParserInit)
}

// NewPuppetoParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPuppetoParser(input antlr.TokenStream) *PuppetoParser {
	PuppetoParserInit()
	this := new(PuppetoParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &puppetoparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "PuppetoParser.g4"

	return this
}

// PuppetoParser tokens.
const (
	PuppetoParserEOF                 = antlr.TokenEOF
	PuppetoParserSPREAD              = 1
	PuppetoParserRETURN              = 2
	PuppetoParserNAN                 = 3
	PuppetoParserLT                  = 4
	PuppetoParserGT                  = 5
	PuppetoParserPUP_START_TAG       = 6
	PuppetoParserPUP_END_TAG         = 7
	PuppetoParserPUP_SHORT_START_TAG = 8
	PuppetoParserPUP_SHORT_END_TAG   = 9
	PuppetoParserTWO_SIDES_OPERATOR  = 10
	PuppetoParserONE_SIDE_OPERATOR   = 11
	PuppetoParserEQ                  = 12
	PuppetoParserNEQ                 = 13
	PuppetoParserLTOE                = 14
	PuppetoParserGTOE                = 15
	PuppetoParserFOR                 = 16
	PuppetoParserTO                  = 17
	PuppetoParserECHO                = 18
	PuppetoParserL_CURLY             = 19
	PuppetoParserR_CURLY             = 20
	PuppetoParserCOMMA               = 21
	PuppetoParserL_SQUARE            = 22
	PuppetoParserR_SQUARE            = 23
	PuppetoParserFN                  = 24
	PuppetoParserL_PARENTHES         = 25
	PuppetoParserR_PARENTHES         = 26
	PuppetoParserAND                 = 27
	PuppetoParserOR                  = 28
	PuppetoParserCOLON               = 29
	PuppetoParserDOT                 = 30
	PuppetoParserPLUS                = 31
	PuppetoParserMINUS               = 32
	PuppetoParserDOUBLE_STAR         = 33
	PuppetoParserPERCENT             = 34
	PuppetoParserBAND                = 35
	PuppetoParserBOR                 = 36
	PuppetoParserBXOR                = 37
	PuppetoParserBLS                 = 38
	PuppetoParserBRS                 = 39
	PuppetoParserNOT                 = 40
	PuppetoParserIF                  = 41
	PuppetoParserELSE                = 42
	PuppetoParserSWITCH              = 43
	PuppetoParserCASE                = 44
	PuppetoParserBREAK               = 45
	PuppetoParserTRY                 = 46
	PuppetoParserCONTINUE            = 47
	PuppetoParserCATCH               = 48
	PuppetoParserDEFAULT             = 49
	PuppetoParserLET                 = 50
	PuppetoParserSTAR                = 51
	PuppetoParserSLASH               = 52
	PuppetoParserFLOAT               = 53
	PuppetoParserINTEGER             = 54
	PuppetoParserNIL                 = 55
	PuppetoParserBOOLEAN             = 56
	PuppetoParserIDENTIFIER          = 57
	PuppetoParserSTRING              = 58
	PuppetoParserWS                  = 59
	PuppetoParserSEMICOLON           = 60
	PuppetoParserHTML                = 61
)

// PuppetoParser rules.
const (
	PuppetoParserRULE_literalValue                 = 0
	PuppetoParserRULE_object                       = 1
	PuppetoParserRULE_pair                         = 2
	PuppetoParserRULE_array                        = 3
	PuppetoParserRULE_functionDefinition           = 4
	PuppetoParserRULE_argumentList                 = 5
	PuppetoParserRULE_argument                     = 6
	PuppetoParserRULE_none                         = 7
	PuppetoParserRULE_scopeBody                    = 8
	PuppetoParserRULE_value                        = 9
	PuppetoParserRULE_expression                   = 10
	PuppetoParserRULE_logicalExpression            = 11
	PuppetoParserRULE_equalityExpression           = 12
	PuppetoParserRULE_comparisonExpression         = 13
	PuppetoParserRULE_additiveExpression           = 14
	PuppetoParserRULE_multiplicativeExpression     = 15
	PuppetoParserRULE_powerExpression              = 16
	PuppetoParserRULE_bitwiseExpression            = 17
	PuppetoParserRULE_shiftExpression              = 18
	PuppetoParserRULE_unaryExpression              = 19
	PuppetoParserRULE_getProperty                  = 20
	PuppetoParserRULE_setProperty                  = 21
	PuppetoParserRULE_callExpression               = 22
	PuppetoParserRULE_chainExpression              = 23
	PuppetoParserRULE_lhsVariableAssignation       = 24
	PuppetoParserRULE_rhsVariableAssignation       = 25
	PuppetoParserRULE_midVariableAssignation       = 26
	PuppetoParserRULE_variableAssignation          = 27
	PuppetoParserRULE_variableDefinition           = 28
	PuppetoParserRULE_variableDefinitionBody       = 29
	PuppetoParserRULE_ifStatement                  = 30
	PuppetoParserRULE_loopStatement                = 31
	PuppetoParserRULE_switchStatement              = 32
	PuppetoParserRULE_switchCase                   = 33
	PuppetoParserRULE_breakStatement               = 34
	PuppetoParserRULE_continueStatement            = 35
	PuppetoParserRULE_tryStatement                 = 36
	PuppetoParserRULE_returnStatement              = 37
	PuppetoParserRULE_statementList                = 38
	PuppetoParserRULE_statement                    = 39
	PuppetoParserRULE_scope                        = 40
	PuppetoParserRULE_scopeWithBreakContinue       = 41
	PuppetoParserRULE_programBody                  = 42
	PuppetoParserRULE_programBodyList              = 43
	PuppetoParserRULE_echoStatement                = 44
	PuppetoParserRULE_programBodyWithBreakContinue = 45
	PuppetoParserRULE_pupShortCode                 = 46
	PuppetoParserRULE_pupCode                      = 47
	PuppetoParserRULE_htmlList                     = 48
	PuppetoParserRULE_html                         = 49
	PuppetoParserRULE_program                      = 50
)

// ILiteralValueContext is an interface to support dynamic dispatch.
type ILiteralValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FLOAT() antlr.TerminalNode
	INTEGER() antlr.TerminalNode
	STRING() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	NIL() antlr.TerminalNode
	BOOLEAN() antlr.TerminalNode
	NAN() antlr.TerminalNode

	// IsLiteralValueContext differentiates from other interfaces.
	IsLiteralValueContext()
}

type LiteralValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLiteralValueContext() *LiteralValueContext {
	var p = new(LiteralValueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PuppetoParserRULE_literalValue
	return p
}

func (*LiteralValueContext) IsLiteralValueContext() {}

func NewLiteralValueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LiteralValueContext {
	var p = new(LiteralValueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PuppetoParserRULE_literalValue

	return p
}

func (s *LiteralValueContext) GetParser() antlr.Parser { return s.parser }

func (s *LiteralValueContext) FLOAT() antlr.TerminalNode {
	return s.GetToken(PuppetoParserFLOAT, 0)
}

func (s *LiteralValueContext) INTEGER() antlr.TerminalNode {
	return s.GetToken(PuppetoParserINTEGER, 0)
}

func (s *LiteralValueContext) STRING() antlr.TerminalNode {
	return s.GetToken(PuppetoParserSTRING, 0)
}

func (s *LiteralValueContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(PuppetoParserIDENTIFIER, 0)
}

func (s *LiteralValueContext) NIL() antlr.TerminalNode {
	return s.GetToken(PuppetoParserNIL, 0)
}

func (s *LiteralValueContext) BOOLEAN() antlr.TerminalNode {
	return s.GetToken(PuppetoParserBOOLEAN, 0)
}

func (s *LiteralValueContext) NAN() antlr.TerminalNode {
	return s.GetToken(PuppetoParserNAN, 0)
}

func (s *LiteralValueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LiteralValueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LiteralValueContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PuppetoParserVisitor:
		return t.VisitLiteralValue(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PuppetoParser) LiteralValue() (localctx ILiteralValueContext) {
	this := p
	_ = this

	localctx = NewLiteralValueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PuppetoParserRULE_literalValue)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(102)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&567453553048682504) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IObjectContext is an interface to support dynamic dispatch.
type IObjectContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	L_CURLY() antlr.TerminalNode
	R_CURLY() antlr.TerminalNode
	AllPair() []IPairContext
	Pair(i int) IPairContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsObjectContext differentiates from other interfaces.
	IsObjectContext()
}

type ObjectContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyObjectContext() *ObjectContext {
	var p = new(ObjectContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PuppetoParserRULE_object
	return p
}

func (*ObjectContext) IsObjectContext() {}

func NewObjectContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ObjectContext {
	var p = new(ObjectContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PuppetoParserRULE_object

	return p
}

func (s *ObjectContext) GetParser() antlr.Parser { return s.parser }

func (s *ObjectContext) L_CURLY() antlr.TerminalNode {
	return s.GetToken(PuppetoParserL_CURLY, 0)
}

func (s *ObjectContext) R_CURLY() antlr.TerminalNode {
	return s.GetToken(PuppetoParserR_CURLY, 0)
}

func (s *ObjectContext) AllPair() []IPairContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPairContext); ok {
			len++
		}
	}

	tst := make([]IPairContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPairContext); ok {
			tst[i] = t.(IPairContext)
			i++
		}
	}

	return tst
}

func (s *ObjectContext) Pair(i int) IPairContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPairContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPairContext)
}

func (s *ObjectContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(PuppetoParserCOMMA)
}

func (s *ObjectContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(PuppetoParserCOMMA, i)
}

func (s *ObjectContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ObjectContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ObjectContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PuppetoParserVisitor:
		return t.VisitObject(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PuppetoParser) Object() (localctx IObjectContext) {
	this := p
	_ = this

	localctx = NewObjectContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PuppetoParserRULE_object)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(104)
		p.Match(PuppetoParserL_CURLY)
	}
	p.SetState(113)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&432345564231761920) != 0 {
		{
			p.SetState(105)
			p.Pair()
		}
		p.SetState(110)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

		for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			if _alt == 1 {
				{
					p.SetState(106)
					p.Match(PuppetoParserCOMMA)
				}
				{
					p.SetState(107)
					p.Pair()
				}

			}
			p.SetState(112)
			p.GetErrorHandler().Sync(p)
			_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
		}

	}
	p.SetState(116)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == PuppetoParserCOMMA {
		{
			p.SetState(115)
			p.Match(PuppetoParserCOMMA)
		}

	}
	{
		p.SetState(118)
		p.Match(PuppetoParserR_CURLY)
	}

	return localctx
}

// IPairContext is an interface to support dynamic dispatch.
type IPairContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLON() antlr.TerminalNode
	AllExpression() []IExpressionContext
	Expression(i int) IExpressionContext
	L_SQUARE() antlr.TerminalNode
	R_SQUARE() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	STRING() antlr.TerminalNode

	// IsPairContext differentiates from other interfaces.
	IsPairContext()
}

type PairContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPairContext() *PairContext {
	var p = new(PairContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PuppetoParserRULE_pair
	return p
}

func (*PairContext) IsPairContext() {}

func NewPairContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PairContext {
	var p = new(PairContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PuppetoParserRULE_pair

	return p
}

func (s *PairContext) GetParser() antlr.Parser { return s.parser }

func (s *PairContext) COLON() antlr.TerminalNode {
	return s.GetToken(PuppetoParserCOLON, 0)
}

func (s *PairContext) AllExpression() []IExpressionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IExpressionContext); ok {
			len++
		}
	}

	tst := make([]IExpressionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IExpressionContext); ok {
			tst[i] = t.(IExpressionContext)
			i++
		}
	}

	return tst
}

func (s *PairContext) Expression(i int) IExpressionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *PairContext) L_SQUARE() antlr.TerminalNode {
	return s.GetToken(PuppetoParserL_SQUARE, 0)
}

func (s *PairContext) R_SQUARE() antlr.TerminalNode {
	return s.GetToken(PuppetoParserR_SQUARE, 0)
}

func (s *PairContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(PuppetoParserIDENTIFIER, 0)
}

func (s *PairContext) STRING() antlr.TerminalNode {
	return s.GetToken(PuppetoParserSTRING, 0)
}

func (s *PairContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PairContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PairContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PuppetoParserVisitor:
		return t.VisitPair(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PuppetoParser) Pair() (localctx IPairContext) {
	this := p
	_ = this

	localctx = NewPairContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PuppetoParserRULE_pair)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(131)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		p.SetState(126)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case PuppetoParserL_SQUARE:
			{
				p.SetState(120)
				p.Match(PuppetoParserL_SQUARE)
			}
			{
				p.SetState(121)
				p.Expression()
			}
			{
				p.SetState(122)
				p.Match(PuppetoParserR_SQUARE)
			}

		case PuppetoParserIDENTIFIER:
			{
				p.SetState(124)
				p.Match(PuppetoParserIDENTIFIER)
			}

		case PuppetoParserSTRING:
			{
				p.SetState(125)
				p.Match(PuppetoParserSTRING)
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}
		{
			p.SetState(128)
			p.Match(PuppetoParserCOLON)
		}
		{
			p.SetState(129)
			p.Expression()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(130)
			p.Match(PuppetoParserIDENTIFIER)
		}

	}

	return localctx
}

// IArrayContext is an interface to support dynamic dispatch.
type IArrayContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	L_SQUARE() antlr.TerminalNode
	R_SQUARE() antlr.TerminalNode
	AllExpression() []IExpressionContext
	Expression(i int) IExpressionContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsArrayContext differentiates from other interfaces.
	IsArrayContext()
}

type ArrayContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyArrayContext() *ArrayContext {
	var p = new(ArrayContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PuppetoParserRULE_array
	return p
}

func (*ArrayContext) IsArrayContext() {}

func NewArrayContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ArrayContext {
	var p = new(ArrayContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PuppetoParserRULE_array

	return p
}

func (s *ArrayContext) GetParser() antlr.Parser { return s.parser }

func (s *ArrayContext) L_SQUARE() antlr.TerminalNode {
	return s.GetToken(PuppetoParserL_SQUARE, 0)
}

func (s *ArrayContext) R_SQUARE() antlr.TerminalNode {
	return s.GetToken(PuppetoParserR_SQUARE, 0)
}

func (s *ArrayContext) AllExpression() []IExpressionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IExpressionContext); ok {
			len++
		}
	}

	tst := make([]IExpressionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IExpressionContext); ok {
			tst[i] = t.(IExpressionContext)
			i++
		}
	}

	return tst
}

func (s *ArrayContext) Expression(i int) IExpressionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ArrayContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(PuppetoParserCOMMA)
}

func (s *ArrayContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(PuppetoParserCOMMA, i)
}

func (s *ArrayContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ArrayContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ArrayContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PuppetoParserVisitor:
		return t.VisitArray(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PuppetoParser) Array() (localctx IArrayContext) {
	this := p
	_ = this

	localctx = NewArrayContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PuppetoParserRULE_array)
	var _la int

	defer func() {
		p.ExitRule()
	}()
